--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@
       </div>
     </div>
 
-    <script type="module" src="main.js" defer/>
+    <script type="module" src="main.js" defer></script>
   </body>
 </html>
